Mise en place post components + dossier scss

--- a/frontend/groupomania/angular.json
+++ b/frontend/groupomania/angular.json
@@ -48,7 +48,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/Scss/styles.scss"
             ],
             "scripts": []
           },
@@ -114,7 +114,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/Scss/styles.scss"
             ],
             "scripts": []
           }
