--- a/frontend/groupomania/angular.json
+++ b/frontend/groupomania/angular.json
@@ -39,6 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["lodash"],
             "outputPath": "dist/groupomania",
             "index": "src/index.html",
             "main": "src/main.ts",
